sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: '<-' expected but '=' found.
	val1 = getValeur(i)
             ^AlgBubbleSort1:12: error: illegal start of simple expression
}
^